--- a/abgabe/code/testing.ipynb
+++ b/abgabe/code/testing.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "!git clone https://github.com/fuzhong2021/mlflow-mall_customer-kmeans.git\n",
     "import sys\n",
     "import subprocess\n",
     "import pkg_resources\n",
@@ -28,6 +29,8 @@
     "if missing:\n",
     "    python = sys.executable\n",
     "    subprocess.check_call([python, '-m', 'pip', 'install', *missing], stdout=subprocess.DEVNULL)\n",
+    "    \n",
+    "sys.path.append('/content/mlflow-mall_customer-kmeans/abgabe/code')\n",
     "\n",
     "import pandas as pd\n",
     "import mlflow\n",
@@ -47,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -57,7 +60,7 @@
    "outputs": [],
    "source": [
     "#load dataset\n",
-    "data = pd.read_csv(r'../data\\out\\clean_mall_customer.csv')\n",
+    "data = pd.read_csv(r'/content/mlflow-mall_customer-kmeans/abgabe/data/out/clean_mall_customer.csv')\n",
     "\n",
     "#split df and take X_test\n",
     "X = train.split_df(data = data[['ageincome','spending_score']])[1]  "
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -82,7 +85,7 @@
    },
    "outputs": [],
    "source": [
-    "logged_model = 'runs:/e0d9f16d8e23484d9da2bd17d50da92d/model'"
+    "logged_model = '/content/mlflow-mall_customer-kmeans/abgabe/code/mlruns/0/e0d9f16d8e23484d9da2bd17d50da92d/artifacts/model'"
    ]
   },
   {
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
